HOTFIX: Fixed platform in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
-version: '1'
 services:
   main:
     restart: always
     build:
       context: .
+      platforms:
+        - linux/arm64
       dockerfile: Dockerfile
     environment:
       - ALPHAVANTAGE_KEY=<>
