--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
 services:
   main:
     restart: always
+    platform: linux/arm64
     build:
       context: .
-      platforms:
-        - linux/arm64
       dockerfile: Dockerfile
     environment:
       - ALPHAVANTAGE_KEY=<>
