HOTFIX: Fixed missing key docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,6 @@ services:
       dockerfile: Dockerfile
     environment:
       - ALPHAVANTAGE_KEY=<>
+      - NEWS_API_KEY=<>
       - TELEGRAM_SUBSCRIBERS=<>
       - TELEGRAM_TOKEN=<>
